--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </div>
                 <p id="rating-value">Level of satisfaction: 0 stars</p>
                 <button id="submit-rating">Submit Review</button>
-                <p id="average-rating"> Average Rating:0 stars</p>
+                <p id="average-rating">Average Rating: 4.7 stars</p>
             </div>
         </section>
     </main>
@@ -336,7 +336,7 @@
                     const avg = (total / ratings.length).toFixed(1);
                     averageRating.textContent = `Classificação Média: ${avg} estrelas`;
                 } else {
-                    averageRating.textContent = 'Classificação Média: 0 estrelas';
+                    averageRating.textContent = 'Average Rating: 0 estrelas';
                 }
             }
 
