--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <img src="imagens/06.jpg" alt="Foto 6">
                 <img src="imagens/07.jpg" alt="Foto 7">
                 <img src="imagens/08.jpg" alt="Foto 8">
+                <img src="imagens/09.jpg" alt="Foto 9">
+                <img src="imagens/10.jpg" alt="Foto 10">
+                <img src="imagens/11.jpg" alt="Foto 11">
+                <img src="imagens/12.jpg" alt="Foto 12">
             </div>
         </div>
     </section>
