--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         <i class="fas fa-home"></i>
     </button>
 
+    <div class="language-selector">
+        <button class="dropdown-toggle" onclick="toggleDropdown()">
+            <img src="imagens/no-mundo-todo branco .png" alt="Escolher Idioma">
+        </button>
+        <ul class="dropdown-menu" id="language-menu">
+            <li><a href="https://ricardosaldanha5.github.io/casinha-da-gloria/">Português</a></li>
+            <li><a href="index-es.html">Español</a></li>
+            <li><a href="#">Français</a></li>
+        </ul>
+    </div>
+
     <section id="galeria">
         <div class="container">
             <h2>Gallery</h2>
@@ -387,6 +398,24 @@
             // Atualiza a média de avaliações ao carregar a página
             updateAverageRating();
         });
+        //botão de linguas
+        function toggleDropdown() {
+            var menu = document.getElementById('language-menu');
+            menu.classList.toggle('show');
+        }
+
+        // Fechar o menu se clicar fora dele
+        window.onclick = function(event) {
+            if (!event.target.closest('.language-selector')) {
+                var menus = document.getElementsByClassName('dropdown-menu');
+                for (var i = 0; i < menus.length; i++) {
+                    var openMenu = menus[i];
+                    if (openMenu.classList.contains('show')) {
+                        openMenu.classList.remove('show');
+                    }
+                }
+            }
+        }
             </script>
 </body>
 </html>
