--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="dropdown-menu" id="language-menu">
             <li><a href="https://ricardosaldanha5.github.io/casinha-da-gloria/">Português</a></li>
             <li><a href="index-es.html">Español</a></li>
-            <li><a href="#">Français</a></li>
+            <li><a href="index-fr.html">Français</a></li>
         </ul>
     </div>
 
